# haskell-brick-snake

./: CHANGELOG.md  LICENSE  README.md  brick-snake.---cabal  brick-snake.cabal  package.yaml
app/: Main.hs
src/: BrickSnake.hs  Snake.hs  UI.hs
