cabal-version:       2.4
name:                brick-snake
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/thecentury/brick-snake
bug-reports:         https://github.com/thecentury/brick-snake/issues
license:             MIT
license-file:        LICENSE
author:              Mikhail Brinchuk
maintainer:          Mikhail Brinchuk <thecentury@gmail.com>
copyright:           2023 Mikhail Brinchuk
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.6.1

source-repository head
  type:                git
  location:            https://github.com/thecentury/brick-snake.git

common common-options
  build-depends:       base ^>= 4.16.4.0,
                       brick,
                       containers,
                       linear,
                       microlens,
                       microlens-th,
                       random
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     BrickSnake

executable brick-snake
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       brick-snake
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N